Fix vertical alignment on send button

--- a/site/public/css/stanzr.scss
+++ b/site/public/css/stanzr.scss
@@ -89,7 +89,7 @@ $fontnavC:  #fff;
   display: none;
 }
 
-
+table, th, td {vertical-align: top;}
 
 a {
   text-decoration: none;
